--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                     <div>
                         <p class="mb-2">Computer-controlled digital transistorized with electronic advance</p>
                         <h1 class="fw-bold pt-2 pb-3 fs-1">Honda CBR 300R</h1>
-                        <p class="mb-4 lead">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                        <p class="mb-4 lead">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+                            Velit
                             officia
                             consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
                         <!-- Button trigger modal -->
