--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
     </footer>
 
     <script src="https://unpkg.com/boxicons@2.0.9/dist/boxicons.js"></script>
-    <script src="js/bootstrap.bundle.js"></script>
+    <script src="js/bootstrap.js"></script>
 </body>
 
 </html>
